--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -21,7 +21,7 @@ body.html {
 a {
     text-decoration: none;
     color: $link-color;
-    border-bottom: 0.1rem solid #ccc;
+    border-bottom: 0.1rem solid rgba(162, 127, 28, 0.5);
     transition: all 0.3s;
     &:hover {
         text-decoration: none;
@@ -290,8 +290,8 @@ header.terms
     border-radius: 1rem;
     padding: 0.5rem 1.5rem 3rem 2rem;
     font-size: 1.375rem;
-    position: relative;
-    height: 100%;
+    //  position: relative;
+    //  height: 100%;
     display: flex;
     flex-direction: column;
 
@@ -425,7 +425,7 @@ header.terms
                 border: 8px double $color-places;
                 border-width: 0.8rem 0.5rem;
                 border-radius: 1rem;
-                min-height: 50rem;
+                // min-height: 50rem;
 
                 #place-kmap-tabs-tabpane-map {
                     padding: 0;
@@ -512,8 +512,8 @@ header.terms
         background-color: #fff;
         /*  margin-top: -3.4rem; */
         .nav-tabs {
-            padding: 0 0 0.25rem;
-            margin: 0.5rem 0 0 1rem;
+            padding: 0 0 0.5rem;
+            margin: 0.5rem 0 0;
             border-bottom: none;
             .nav-link {
                 padding: 0;
@@ -554,11 +554,11 @@ header.terms
                     content: '';
                     display: inline-block;
                     border-style: solid;
-                    border-width: 0.1rem 0.55rem 0.55rem 0.55rem;
+                    border-width: 0.1rem 0.85rem 0.85rem 0.85rem;
                     border-color: transparent transparent red;
                     border-bottom-color: inherit;
                     position: absolute;
-                    bottom: -0.3rem;
+                    bottom: -0.65rem;
                     left: 50%;
                     margin-left: -0.4rem;
                     background: white;
@@ -575,7 +575,7 @@ header.terms
                     display: inline-block;
                     border-bottom-style: solid;
                     position: absolute;
-                    bottom: -0.65rem;
+                    top: -0.95rem;
                     left: 0;
                 }
             }
