--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -11,7 +11,7 @@ ul.fancytree-container {
     border-color: #929ae4 #929ae4 #929ae4 #c0c0c0;
     box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
     border-width: 0.325rem 0.15rem 0.575rem 0.15rem;
-    border-radius: 0.5rem 0.5rem 3rem 0.5rem;
+    border-radius: 0.5rem 0 3rem 0.5rem;
     background: white;
     font-size: 1.55rem;
     padding: 1rem 1rem 2rem;
@@ -95,7 +95,7 @@ ul.fancytree-container {
         margin-right: 0.9rem;
         font-size: 1.95rem;
         position: relative;
-        top: 0.25rem;
+        top: 0.1rem;
     }
     .label a {
         color: #000;
