--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -429,7 +429,7 @@
 }
 
 .head-related {
-    text-transform: capitalize;
+    text-transform: uppercase;
     font-size: 1.35rem;
     font-weight: bold;
 }
