--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -296,8 +296,8 @@ header.terms
     font-size: 1.375rem;
     //  position: relative;
     //  height: 100%;
-    display: flex;
-    flex-direction: column;
+    //  display: flex;
+    //  flex-direction: column;
 
     font-size: 120%;
 
