--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -434,7 +434,7 @@
     right: -2.1rem;
     bottom: 0.25rem;
     font-size: 1.65rem;
-    color: #888;
+    color: #91693c;
 }
 .sui-advTermRem:hover::before {
     color: red;
