--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -23,6 +23,7 @@ a {
     color: $link-color;
     border-bottom: 0.05rem solid rgba(162, 127, 28, 0.5);
     transition: all 0.3s;
+    padding-bottom: 0.15rem;
     &:hover {
         text-decoration: none;
         box-shadow: none;
@@ -954,6 +955,8 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
     border-left: 0.3rem solid #6b77ea;
     border-right: 0.3rem solid #6b77ea;
     background-color: #f9f9f9;
+    color: $color-terms;
+    font-weight: bold;
 
     > span {
         font-size: 1.5rem;
@@ -961,6 +964,7 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
         letter-spacing: 0.0575rem;
         text-transform: uppercase;
         margin-left: 0.5rem;
+        color: #333;
     }
     > div {
         display: inline;
@@ -1190,6 +1194,7 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         .info {
             padding-top: 0.75rem;
             margin-left: 2rem;
+            font-size: 1.5rem;
         }
         .creator {
             display: block;
@@ -1213,7 +1218,7 @@ header.terms + .two-columns .c-view__wrapper.gallery {
                 float: left;
                 h5 {
                     text-transform: uppercase;
-                    font-size: 1.3rem;
+                    font-size: 1.5rem;
                     font-weight: 600;
                     color: #555;
                     margin-left: -0.75rem;
@@ -1230,7 +1235,7 @@ header.terms + .two-columns .c-view__wrapper.gallery {
                 li {
                     list-style-type: none;
                     font-family: 'EB Garamond', serif;
-                    font-size: 1.5rem;
+                    font-size: 1.6rem;
                 }
             } // Ends kmaps for relateds in accordion
         }
