--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -101,6 +101,7 @@
 }
 
 .c-content__header__perspective {
-    margin-left: 1rem;
-    opacity: 0.7;
+    margin-left: 0.75rem;
+    opacity: 0.8;
+    font-style: italic;
 }
