--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -17,7 +17,7 @@
     padding: 0;
     min-height: 5rem;
     width: calc(100% - 10px);
-    cursor: default !important;
+    // cursor: default !important;
 }
 .l-column__search > section .sui-advBox:first-child {
     border-top: 1px solid #e0e0e0;
@@ -163,7 +163,7 @@
     margin: 0 0.5rem 0.2rem;
     text-transform: capitalize;
     cursor: default;
-    color: #000;
+    color: $color-terms;
     background: #f7f7f7;
     border: 0.2rem dashed #c4c8ef;
     border-left: 0.3rem solid #6b77ea;
