--- a/kmaps-app/src/views/Terms/TermsDefinitionsFilter/CustomSelect/CustomSelect.css
+++ b/kmaps-app/src/views/Terms/TermsDefinitionsFilter/CustomSelect/CustomSelect.css
@@ -124,7 +124,7 @@
 .custSelect__option {
     position: relative;
     display: block;
-    padding: 0.6rem 2rem;
+    padding: 1.5rem 7rem 3rem 3rem;
     font-size: 14px;
     cursor: pointer;
     transition: all 0.5s;
@@ -135,8 +135,6 @@
     color: #000;
 }
 .custSelect__option:not(.cs-selected) {
-    padding-left: 3rem;
-    padding-right: 7rem;
 }
 .custSelect__option.cs_selected {
     color: #ffffff;
