Style kmaps viewer tabs consistent, Kmapstree line-height set taller

--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -315,6 +315,7 @@
                 color: #000;
                 border-bottom: thin solid #fff;
                 border-top: 0.3rem solid $color-places;
+                padding-top: 1.3rem;
             }
         }
     }
