--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -32,6 +32,8 @@
         }
         .total {
             font-weight: bold;
+            margin-left: 0.5rem;
+            border-bottom: 5px solid #ddd;
         }
     }
     .c-featurePager__navButtons {
