--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -462,7 +462,7 @@
         border: 1px solid #ccc;
         border-radius: 1rem;
         padding: 2rem 1.5rem 5rem 2rem;
-        height: 100%;
+        min-height: 65vh;
         background-color: #fff;
     }
 }
