Style update featurePager Displaying total, removed title header in Av template for kmaps

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -270,7 +270,7 @@ div.image-wrapper.center figcaption {
 }
 
 .places + .two-columns .l-content__main__wrap {
-    margin-top: 2rem;
+    // margin-top: 2rem;
 }
 
 // --------------------------------------
