--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -74,7 +74,7 @@
     margin-bottom: 1rem
 
     img
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.8)
+    // box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.8)
 
   h2.image-header
     font-weight: bold
