--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -9,7 +9,7 @@ ul.fancytree-container {
     overflow-y: scroll;
     border-style: solid;
     border-color: #929ae4 #929ae4 #929ae4 #c0c0c0;
-    box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
+    // box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
     border-width: 0.325rem 0.15rem 0.575rem 0.15rem;
     border-radius: 0.5rem 0 3rem 0.5rem;
     background: white;
