--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -104,21 +104,22 @@ div#av-trscrpt-wrapper {
 
 #av-meta-row .nav-tabs a.active {
     background-color: white;
-    border: 2px solid #ccc;
+    border: 0.15rem solid #ccc;
     color: rgb(88, 170, 180);
     font-weight: bold;
     border-bottom: none;
+    border-top: 4px solid rgb(88, 170, 180);
 }
 
 #av-meta-row .tab-content .tab-pane {
     padding: 2rem 2.4rem 3rem;
     min-height: 50rem;
     background-color: #fff;
-    border: 2px solid #ccc;
+    border: 0.15rem solid #ccc;
     border-top: none;
     width: 100%;
     margin-right: 0.6rem;
-    border-radius: 0 1rem 1rem;
+    border-radius: 0 0 1rem 1rem;
 }
 
 .sui-popover {
@@ -408,9 +409,4 @@ div#meta-details p strong:after {
     text-rendering: optimizeLegibility !important;
     font-family: 'Arial', 'Heiti SC', 'Microsoft Yahei', simsun, sans-serif;
     font-size: 120%;
-}
-
-#av-meta-row .nav-tabs a.active,
-#av-meta-row .tab-content .tab-pane {
-    border-width: 0.15rem;
 }
