--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -41,7 +41,7 @@
             margin-left: 0.5rem;
             margin-right: 0.75rem;
             border-radius: 1.5rem;
-            border: 4px double #999;
+            border: 4px double #aaa;
         }
     }
     .c-featurePager__navButtons {
@@ -79,6 +79,9 @@
         .icon:first-child {
             padding-left: 1.5rem;
         }
+        .icon:nth-of-type(2) {
+            margin-right: 0.5rem;
+        }
         .u-icon__arrow3-right::before,
         .shanticon-arrow3-right:before {
             position: relative;
@@ -90,6 +93,7 @@
             position: relative;
             top: -0.2rem;
             margin-right: 0.85rem;
+            margin-left: 0.85rem;
             text-align: center;
             border: 1px solid #4d59ca;
             border-radius: 0.35rem;
@@ -121,7 +125,7 @@
         margin: 0 auto 1.5rem;
         padding-left: 1rem;
         padding-right: 1rem;
-        font-size: 1.75rem;
+        font-size: 1.5rem;
         font-style: italic;
 
         .react-numeric-input {
@@ -134,7 +138,7 @@
             text-align: center;
             border-radius: 0.85rem !important;
             line-height: 1.5;
-            border: 5px double #999 !important;
+            border: 5px double #aaa !important;
         }
     }
 }
