--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -34,14 +34,13 @@
         }
         .total {
             font-weight: bold;
-            color: #333;
+            color: #fff;
             font-size: 1.45rem;
-            background-color: #fff;
             padding: 0.15rem 1.25rem 0.2rem;
             margin-left: 0.5rem;
             margin-right: 0.75rem;
             border-radius: 1.5rem;
-            border: 4px double #aaa;
+            background: #707070;
         }
     }
     .c-featurePager__navButtons {
@@ -80,7 +79,7 @@
             padding-left: 1.5rem;
         }
         .icon:nth-of-type(2) {
-            margin-right: 0.5rem;
+            margin-right: 0.25rem;
         }
         .u-icon__arrow3-right::before,
         .shanticon-arrow3-right:before {
@@ -117,6 +116,8 @@
 
             .c-pager__counterMax {
                 padding: 0 1rem;
+                font-weight: bold;
+                font-size: 1.65rem;
             }
         }
     }
