--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1043,7 +1043,10 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
     padding-top: 0;
     border: none;
 }
-.react-photo-gallery--gallery {
+.react-photo-gallery--gallery,
+.react-photo-gallery--gallery div,
+.react-photo-gallery--gallery img {
+    cursor: default !important;
 }
 
 header.terms + .two-columns .c-view__wrapper.gallery {
