--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -15,21 +15,21 @@
     border: 12px solid #222;
     content: '';
     margin-left: 45%;
-    border-top: 0px;
+    border-top: 0;
     border-left: 12px solid transparent;
     border-right: 12px solid transparent;
 }
-.react-photo-gallery--gallery
-    #FoldOutViewer
-    ~ .sui-featureGallery-selectedImg:after {
-    display: inline-block;
-    width: 1rem;
-    border: 12px solid #222;
-    content: '';
-    margin-left: 45%;
-    border-top: 0px;
-    border-left: 12px solid transparent;
-    border-right: 12px solid transparent;
+.react-photo-gallery--gallery {
+    #FoldOutViewer ~ .sui-featureGallery-selectedImg:after {
+        display: inline-block;
+        width: 1rem;
+        border: 12px solid #222;
+        content: '';
+        margin-left: 45%;
+        border-top: 0;
+        border-left: 12px solid transparent;
+        border-right: 12px solid transparent;
+    }
 }
 
 // The DropDown / FoldOut Area
@@ -208,10 +208,7 @@
                 margin: 0 1rem;
             }
 
-            .link {
-            }
             .link a {
-                color: inherit;
                 display: block;
                 padding: 1rem;
                 line-height: 3;
