--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -123,7 +123,7 @@
     }
     .c-featurePager__itemCount {
         white-space: nowrap;
-        margin: 0 auto 1.5rem;
+        margin: -0.35rem auto 1.5rem;
         padding-left: 1rem;
         padding-right: 1rem;
         font-size: 1.5rem;
