--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -1,6 +1,3 @@
-#l-site__wrap.av {
-    /*   width: 98.9vw; */
-}
 #av-viewer {
     max-width: 180rem;
     margin: 0 auto;
@@ -21,24 +18,9 @@
     color: white;
     display: none; /* temp */
 }
-.av .c-content__header__main__sub a {
-    text-transform: capitalize;
-}
-.av .c-content__header__main__sub a:hover {
-    color: #fff;
-    text-decoration: none;
-}
-.av .c-content__header__main__sub a.self {
-    cursor: default;
-}
-.av .c-content__header__main__sub a.self:hover {
-    color: #eee;
-    text-decoration: none;
-}
 
 #sui-av,
 #av-meta-row {
-    /* overflow: visible; */
     margin: 1rem auto 0;
     font-family: 'Open Sans', 'Segoe UI', Tahoma, sans-serif, shanticon;
 }
@@ -46,17 +28,14 @@
     margin: 0 auto 5rem;
 }
 .c-content__main__kmaps #av-meta-row {
-    /*  margin: 0 0 5rem; */
 }
 
 #sui-viewerSide {
     padding-left: 2.5rem;
     max-width: 90rem;
-    /*  max-height: 78rem; */
     overflow-x: scroll;
 }
 .c-content__main__kmaps #sui-viewerSide {
-    /* padding: 0 0 0 1.5rem; */
 }
 #sui-kplayer {
     width: 100%;
@@ -67,9 +46,7 @@
 }
 
 #av-player-row {
-    /* overflow-x: hidden;
-    overflow-y: visible;
-    height: 800px; */
+    min-height: 67rem;
 }
 
 div#av-trscrpt-wrapper {
@@ -87,28 +64,46 @@ div#av-trscrpt-wrapper {
     overflow-wrap: break-word;
 }
 
+#av-meta-row .nav-tabs {
+    padding: 0 1rem;
+}
+
 #av-meta-row .nav-tabs a {
-    line-height: 3.75rem;
-    font-size: 1.65rem;
+    line-height: 3rem;
+    padding-top: 1.25rem;
+    font-size: 1.75rem;
     width: 50%;
     text-align: center;
     letter-spacing: 0.175rem;
     border-top-left-radius: 0.75rem;
     border-top-right-radius: 0.75rem;
-    background-color: rgb(88, 170, 180);
-}
-
-#av-meta-row .nav-tabs a {
+    background-color: #2ea3ac;
     color: white;
+    position: relative;
 }
-
 #av-meta-row .nav-tabs a.active {
     background-color: white;
     border: 0.15rem solid #ccc;
-    color: rgb(88, 170, 180);
+    color: #2ea3ac;
     font-weight: bold;
     border-bottom: none;
-    border-top: 4px solid rgb(88, 170, 180);
+    border-top: 4px solid #2ea3ac;
+}
+
+#av-meta-row .nav-tabs a.active::before {
+    width: 0;
+    height: 0;
+    content: '';
+    display: inline-block;
+    border-style: solid;
+    border-width: 0.65rem 0.65rem 0.1rem 0.65rem;
+    border-color: #2ea3ac transparent transparent;
+    position: absolute;
+    top: 0.2rem;
+    left: 50%;
+    z-index: 1000;
+    margin-left: -0.4rem;
+    background: white;
 }
 
 #av-meta-row .tab-content .tab-pane {
@@ -119,7 +114,7 @@ div#av-trscrpt-wrapper {
     border-top: none;
     width: 100%;
     margin-right: 0.6rem;
-    border-radius: 0 0 1rem 1rem;
+    border-radius: 1rem;
 }
 
 .sui-popover {
@@ -145,7 +140,7 @@ div#av-trscrpt-wrapper {
 }
 
 #av-trscrpt-wrapper .row {
-    margin: 0px;
+    margin: 0;
 }
 
 #av-trscrpt-wrapper .av-trscrpt-ctrls {
@@ -161,10 +156,6 @@ div#av-trscrpt-wrapper {
     margin: 2.25rem 1.5rem 0;
     user-select: none;
     flex-grow: 1;
-    /*  min-width: 13rem; */
-
-    /* text-align: center;*/
-    /* white-space:nowrap; */
 }
 #sui-transSrc .navwrapper {
     padding: 0 2rem;
@@ -226,12 +217,6 @@ div#sui-transSrcGo .icon.search {
     font-size: 1.95rem;
     color: #999;
 }
-.firefox div#sui-transSrcGo .icon.search {
-    /*  right: 50%; */
-}
-.safari div#sui-transSrcGo .icon.search {
-    /*  right: 50%; */
-}
 
 div#sui-transSrcGo button.search {
     position: absolute;
@@ -277,75 +262,6 @@ div#sui-transSrcGo .icon.clear {
     background-color: #f6f872;
     border-radius: 10px;
 }
-/*
-@media screen and (max-width: 1440px) {
-    div#sui-transSrcGo .icon.search {
-        right: 54.5%;
-    }
-
-    .firefox div#sui-transSrcGo .icon.search {
-        right: 62%;
-    }
-    .safari div#sui-transSrcGo .icon.search {
-        right: 61%;
-    }
-    div#sui-transSrcGo button.search {
-        right: 8.2%;
-    }
-
-    .firefox div#sui-transSrcGo button.search {
-        right: 9%;
-    }
-    .safari div#sui-transSrcGo button.search {
-        right: 9%;
-    }
-    div#sui-transSrcGo .icon.clear {
-        right: 14.5%;
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    div#sui-transSrcGo .icon.search {
-        right: 61%;
-    }
-
-    div#sui-transSrcGo button.search {
-        right: 9%;
-    }
-
-    div#sui-transSrcGo .icon.clear {
-        right: 16%;
-    }
-}
-
-@media screen and (max-width: 770px) {
-    div#sui-transSrcGo .icon.search {
-        right: 49.5%;
-    }
-
-    div#sui-transSrcGo button.search {
-        right: 7.7%;
-    }
-
-    div#sui-transSrcGo .icon.clear {
-        right: 13%;
-    }
-}
-
-@media screen and (max-width: 360px) {
-    div#sui-transSrcGo .icon.search {
-        right: 75%;
-    }
-
-    div#sui-transSrcGo button.search {
-        right: 9%;
-    }
-
-    div#sui-transSrcGo .icon.clear {
-        right: 17%;
-    }
-}
-*/
 
 /** Thumbnail Styles **/
 .av #meta-mlt {
@@ -389,7 +305,8 @@ div#meta-details p strong:after {
     letter-spacing: normal !important;
     text-rendering: optimizeLegibility !important;
     font-family: 'Babelstone', 'Jomolhari-ID', 'Jomolhari', 'Noto Sans Tibetan',
-        'Tibetan Machine Uni', 'Kailasa', 'Uchen_05', 'Microsoft Himalaya' !important;
+        'Tibetan Machine Uni', 'Kailasa', 'Uchen_05', 'Microsoft Himalaya',
+        sans-serif !important;
     font-size: 160%;
     line-height: 140%;
     vertical-align: middle;
