initial implementation of working persistent perspectives

--- a/kmaps-app/src/main/MandalaSettings/MandalaSettings.scss
+++ b/kmaps-app/src/main/MandalaSettings/MandalaSettings.scss
@@ -45,4 +45,10 @@
             font-size: 1.25rem;
         }
     }
+
+    @media (min-width: 769px) {
+        .modal-dialog {
+            max-width: 600px;
+        }
+    }
 }
