--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -36,8 +36,7 @@
         .total {
             font-weight: bold;
             font-size: 1.5rem;
-            padding: 0.15rem 1.25rem 0.2rem 0;
-            margin-right: 0.75rem;
+            padding: 0.15rem 0 0.2rem 0;
             border-radius: 1.5rem;
         }
     }
@@ -96,9 +95,9 @@
             border-radius: 0.35rem;
             border-width: 0.35rem 0.1rem;
             padding: 0 !important;
-            opacity: 0.5;
+            opacity: 0.7;
             &:hover {
-                opacity: 0.75;
+                opacity: 0.9;
             }
         }
         .c-pager__counterWrapper {
@@ -145,9 +144,9 @@
             border-style: solid;
             border-color: $color-mandala !important;
             border-width: 0.35rem 0.1rem !important;
-            opacity: 0.5;
+            opacity: 0.7;
             &:hover {
-                opacity: 0.75;
+                opacity: 0.9;
             }
         }
     }
