converting perspective options to radio buttons

--- a/kmaps-app/src/main/MandalaSettings/MandalaSettings.scss
+++ b/kmaps-app/src/main/MandalaSettings/MandalaSettings.scss
@@ -25,6 +25,16 @@
         color: #222222;
     }
 
+    .l-persp-radio {
+        input {
+            vertical-align: middle;
+        }
+        span {
+            display: inline-block;
+            margin-left: 1.5rem;
+        }
+    }
+
     .c-modal_subsection {
         margin-top: 1rem;
         padding-bottom: 0.5rem;
