Style update feature pager and selected facetItems

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -968,6 +968,9 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
             position: relative;
             top: 0;
         }
+        .facetItem:not(.icon) {
+            color: $color-mandala;
+        }
     }
     &:empty {
         border: none;
