--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -51,6 +51,7 @@
 .c-content__header__breadcrumb .breadcrumb-item {
     padding: 0;
     border-bottom-color: transparent;
+    border-bottom-width: 0.15rem;
     margin-left: 2rem;
     transition: border 0.3s;
     position: relative;
@@ -58,7 +59,7 @@
 }
 
 .c-content__header__breadcrumb .breadcrumb-item:hover {
-    border-bottom-color: #fff;
+    border-bottom-color: #f5f5f5;
 }
 .c-content__header__breadcrumb .breadcrumb-item:active {
     border-bottom-color: transparent;
