--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -438,6 +438,7 @@ header.terms + .two-columns {
                 #place-kmap-tabs-tabpane-ids {
                     padding: 0.75rem 1.5rem 3rem 2.25rem;
                     font-size: 1.55rem;
+                    min-height: 45rem;
                 }
             }
         }
@@ -564,26 +565,15 @@ header.terms + .two-columns {
                     left: 50%;
                     margin-left: -0.4rem;
                     background: white;
-
                     &:hover::before {
                         /*  border-color: inherit;
                         background: white; */
                     }
                 }
-                &.active::after {
-                    width: 100%;
-                    height: 8px;
-                    content: '';
-                    display: inline-block;
-                    border-bottom-style: solid;
-                    position: absolute;
-                    top: -0.95rem;
-                    left: 0;
-                }
             }
         }
         .treeNav-header ~ .nav-tabs .nav-link {
-            margin-top: 0;
+            margin-top: 0.25rem 0;
             padding-bottom: 0.25rem;
         }
     }
