--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -178,6 +178,7 @@
     display: inline-block;
     margin-right: 1.5rem;
     margin-top: 0.75rem;
+    font-weight: bold;
     white-space: nowrap;
     position: relative;
     padding-bottom: 0.2rem;
