--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -166,9 +166,10 @@
     color: $color-terms;
     background: #f7f7f7;
     border: 0.2rem dashed #c4c8ef;
-    border-left: 0.3rem solid #6b77ea;
-    border-right: 0.3rem solid #6b77ea;
-    border-radius: 0.5rem;
+    border-left: 0.2rem solid #6b77ea;
+    border-right: 0.2rem solid #6b77ea;
+    border-radius: 1rem;
+    border-top: 0.7rem double #6b77ea;
 }
 
 .sui-advTerm:empty {
