--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -2,16 +2,30 @@
     margin-bottom: 3.2rem;
 }
 .sui-termDicts__title {
-    font-size: 1.5rem;
+    font-size: 1.65rem;
+    font-weight: bold;
     text-transform: uppercase;
     color: #fff;
     letter-spacing: 0.1rem;
     display: block;
     background: #91693e;
-    padding: 1rem 1.6rem 0.8rem;
+    padding: 1rem 1.6rem 0.8rem 5rem;
     border-radius: 0.75rem 0.5rem 0.5rem 0.75rem;
     border-left: 1.25rem double #fff;
     margin-left: -0.5rem;
+    position: relative;
+}
+.sui-termDicts__title:before {
+    content: '\e658';
+    display: inline-block;
+    font-family: shanticon, sans-serif;
+    color: #fff;
+    position: absolute;
+    font-size: 2.5rem;
+    width: 3rem;
+    height: 3rem;
+    left: 1.5rem;
+    bottom: 0.7rem;
 }
 .sui-termDicts__content {
     padding: 1.5rem 2rem;
