--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -328,6 +328,7 @@
         h4.head-related {
             font-size: 1.5rem;
             text-transform: capitalize;
+            margin-bottom: 1.25rem;
         }
         .kmap-related h6 {
             margin-top: 2rem;
