--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -66,6 +66,7 @@ div#av-trscrpt-wrapper {
 
 #av-meta-row .nav-tabs {
     padding: 0 1rem;
+    border-bottom: none;
 }
 
 #av-meta-row .nav-tabs a {
@@ -75,19 +76,20 @@ div#av-trscrpt-wrapper {
     width: 50%;
     text-align: center;
     letter-spacing: 0.175rem;
-    border-top-left-radius: 0.75rem;
-    border-top-right-radius: 0.75rem;
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
     background-color: #2ea3ac;
     color: white;
     position: relative;
+    border-top: 0.5rem double white;
 }
 #av-meta-row .nav-tabs a.active {
     background-color: white;
-    border: 0.15rem solid #ccc;
+    border: 0.15rem solid #2ea3ac;
     color: #2ea3ac;
     font-weight: bold;
     border-bottom: none;
-    border-top: 4px solid #2ea3ac;
+    border-top: 0.5rem double #2ea3ac;
 }
 
 #av-meta-row .nav-tabs a.active::before {
@@ -110,11 +112,12 @@ div#av-trscrpt-wrapper {
     padding: 2rem 2.4rem 3rem;
     min-height: 50rem;
     background-color: #fff;
-    border: 0.15rem solid #ccc;
+    border: 0.15rem solid #2ea3ac;
     border-top: none;
     width: 100%;
     margin-right: 0.6rem;
     border-radius: 1rem;
+    border-bottom: 0.9rem double #2ea3ac;
 }
 
 .sui-popover {
