--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -86,8 +86,8 @@
             left: 0.25rem;
         }
         span input {
-            line-height: 1.15;
-            width: 5.5rem;
+            //  line-height: 1.15;
+            //  width: 5.5rem;
             margin-right: 0.85rem;
             margin-left: 0.85rem;
             text-align: center;
