--- a/kmaps-app/src/views/Collections/collections.scss
+++ b/kmaps-app/src/views/Collections/collections.scss
@@ -19,7 +19,7 @@
             border: none;
             margin-top: 2rem;
             .react-photo-gallery--gallery {
-                margin-top: 3rem;
+                margin-top: 0;
             }
         }
 
