--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -14,9 +14,9 @@ ul.fancytree-container {
     border-radius: 0.5rem 0 3rem 0.5rem;
     background: white;
     font-size: 1.55rem;
-    padding: 1rem 1rem 2rem;
+    padding: 1rem 1rem 10rem;
     white-space: nowrap;
-    height: calc(100vh - 36rem);
+    min-height: calc(100vh - 40rem);
     width: 100%;
 }
 .l-column__search .c-kmaptree {
