--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -11,6 +11,9 @@
 
     &.bottom {
         margin-top: 3rem;
+        position: absolute;
+        bottom: 1rem;
+        width: 100%;
     }
     .c-featurePager__resultSummary {
         white-space: nowrap;
