Style updates feature pager and kmaps tree border

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -952,7 +952,7 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
     > div {
         display: inline;
         padding-right: 1.75rem;
-
+        text-transform: capitalize;
         .facetItem {
             font-size: 1.8rem;
             margin-left: 2.5rem;
