--- a/kmaps-app/src/main/RightSideBar.scss
+++ b/kmaps-app/src/main/RightSideBar.scss
@@ -169,6 +169,7 @@
     border-left: 0.2rem solid #6b77ea;
     border-right: 0.2rem solid #6b77ea;
     border-radius: 1rem;
+    overflow: hidden;
     //  border-top: 0.7rem double #6b77ea;
 }
 
