--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -7,7 +7,7 @@ ul.fancytree-container {
 .c-kmaptree {
     margin: 0 1rem 0 0;
     overflow-y: scroll;
-    border-style: solid;
+    border-style: double solid solid solid;
     border-color: #929ae4 #929ae4 #929ae4 #c0c0c0;
     // box-shadow: inset -0.5rem -2rem 3rem #c0cbd04d;
     border-width: 0.325rem 0.15rem 0.575rem 0.15rem;
@@ -24,8 +24,10 @@ ul.fancytree-container {
     margin: 0.45rem 0 0;
     padding-top: 1rem;
     padding-left: 2rem;
-    border-width: 0.325rem 0.15rem 0.575rem 0;
+    border-width: 0.5rem 0.15rem 0.575rem 0;
     border-top-left-radius: 0;
+    border-bottom-width: 1rem;
+    border-bottom-style: double;
 }
 .l-column__related .c-kmaptree {
     width: 23rem;
@@ -33,6 +35,8 @@ ul.fancytree-container {
     transition: width 0.5s;
     transition-delay: 0.4s;
     height: calc(100vh - 38rem);
+    border-bottom-width: 0.7rem;
+    border-bottom-style: double;
 }
 .l-column__related .c-kmaptree:hover {
     width: 50rem;
